# scrcpy-gui

./: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: inno-setup.md
docs/superpowers/plans/: 2026-04-26-scrcpy-gui.md  2026-04-27-scrcpy-gui-1.1-ux-reliability.md  2026-04-27-scrcpy-gui-screen-recording.md  2026-04-28-scrcpy-gui-1.2-mirroring-options.md
docs/superpowers/specs/: 2026-04-26-scrcpy-gui-design.md  2026-04-27-scrcpy-gui-phase-2-design.md  2026-04-27-scrcpy-gui-screen-recording-design.md  2026-04-28-scrcpy-gui-ux-and-wireless-design.md
src/scrcpy_gui/: __main__.py  adb.py  connection_ux.py  download.py  ensure.py  manifest.py  mirroring_options.py  paths.py  recording_paths.py  scrcpy_runner.py  workers.py
src/scrcpy_gui/data/: vendor-windows.json
src/scrcpy_gui/ui/: about_dialog.py  connection_help_dialog.py  main_window.py  wireless_dialog.py
tests/: conftest.py  test_adb.py  test_connection_ux.py  test_download.py  test_manifest.py  test_mirroring_options.py  test_paths.py  test_recording_paths.py
