[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrcpy-gui"
version = "0.2.0"
description = "Open-source GUI for scrcpy (Android screen mirroring)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6,<7",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0", "pyinstaller>=6.0"]
[project.scripts]
scrcpy-gui = "scrcpy_gui.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
scrcpy_gui = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
